[project]
name = "clipper-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "boto3>=1.39.4",
    "datasets>=4.0.0",
    "fastapi[standard]>=0.116.1",
    "ffmpegcv>=0.3.18",
    "gdown>=5.2.0",
    "google-genai>=1.25.0",
    "modal>=1.0.5",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pysubs2>=1.8.0",
    "python-speech-features>=0.6",
    "pytubefix>=9.3.0",
    "scenedetect>=0.6.6",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "whisperx>=3.4.2",
]
